chapter7 residual connections added

--- a/chapter7.ipynb
+++ b/chapter7.ipynb
@@ -897,6 +897,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Residual connections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(23)\n",
+    "dummy_points = torch.randn((100, 1))\n",
+    "dummy_dataset = TensorDataset(dummy_points, dummy_points)\n",
+    "dummy_loader = DataLoader(\n",
+    "  dummy_dataset, batch_size=16, shuffle=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dummy(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Dummy, self).__init__()\n",
+    "        self.linear = nn.Linear(1, 1)\n",
+    "        self.activation = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.linear(x)\n",
+    "        out = self.activation(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(555)\n",
+    "dummy_model = Dummy()\n",
+    "dummy_loss_fn = nn.MSELoss()\n",
+    "dummy_optimizer = optim.SGD(dummy_model.parameters(), lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_sbs = StepByStep(dummy_model, dummy_loss_fn, dummy_optimizer)\n",
+    "dummy_sbs.set_loaders(dummy_loader)\n",
+    "dummy_sbs.train(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.9012059 ,  0.        ],\n",
+       "       [ 0.56559485,  0.56559485],\n",
+       "       [-0.48822638,  0.        ],\n",
+       "       [ 0.75069577,  0.75069577],\n",
+       "       [ 0.58925384,  0.58925384]], dtype=float32)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([dummy_points[:5].numpy(),\n",
+    "  dummy_sbs.predict(dummy_points)[:5]], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DummyResidual(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(DummyResidual, self).__init__()\n",
+    "        self.linear = nn.Linear(1, 1)\n",
+    "        self.activation = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        identity = x\n",
+    "        out = self.linear(x)\n",
+    "        out = self.activation(out)\n",
+    "        out = out + identity\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(555)\n",
+    "dummy_model = DummyResidual()\n",
+    "dummy_loss_fn = nn.MSELoss()\n",
+    "dummy_optimizer = optim.SGD(dummy_model.parameters(), lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_sbs = StepByStep(dummy_model, dummy_loss_fn, dummy_optimizer)\n",
+    "dummy_sbs.set_loaders(dummy_loader)\n",
+    "dummy_sbs.train(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.9012059 , -0.9012059 ],\n",
+       "       [ 0.56559485,  0.56559485],\n",
+       "       [-0.48822638, -0.48822638],\n",
+       "       [ 0.75069577,  0.75069577],\n",
+       "       [ 0.58925384,  0.58925384]], dtype=float32)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([dummy_points[:5].numpy(),\n",
+    "  dummy_sbs.predict(dummy_points)[:5]], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('linear.weight', tensor([[0.1490]], device='cuda:0')),\n",
+       "             ('linear.bias', tensor([-0.3329], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_model.state_dict()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
