chapter7 residual block added

--- a/chapter7.ipynb
+++ b/chapter7.ipynb
@@ -1073,6 +1073,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Residual blocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualBlock(nn.Module):\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels, stride=1):\n",
+    "        super(ResidualBlock, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(\n",
+    "        in_channels, out_channels,\n",
+    "        kernel_size=3, padding=1, stride=stride,\n",
+    "        bias=False\n",
+    "        )\n",
+    "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        self.conv2 = nn.Conv2d(\n",
+    "        out_channels, out_channels,\n",
+    "        kernel_size=3, padding=1,\n",
+    "        bias=False\n",
+    "        )\n",
+    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
+    "        self.downsample = None\n",
+    "        if out_channels != in_channels:\n",
+    "            self.downsample = nn.Conv2d(\n",
+    "            in_channels, out_channels,\n",
+    "            kernel_size=1, stride=stride\n",
+    "            )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        identity = x\n",
+    "        # First \"weight layer\" + activation\n",
+    "        out = self.conv1(x)\n",
+    "        out = self.bn1(out)\n",
+    "        out = self.relu(out)\n",
+    "        # Second \"weight layer\"\n",
+    "        out = self.conv2(out)\n",
+    "        out = self.bn2(out)\n",
+    "        # What is that?!\n",
+    "        if self.downsample is not None:\n",
+    "            identity = self.downsample(identity)\n",
+    "        # Adding inputs before activation\n",
+    "        out = out + identity\n",
+    "        out = self.relu(out)\n",
+    "        return out"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
