chapter7 fine tuning added

--- a/chapter7.ipynb
+++ b/chapter7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from torchvision.models import alexnet, resnet18, inception_v3\n",
     "from torchvision.models.alexnet import AlexNet_Weights\n",
     "from torchvision.models.inception import Inception_V3_Weights\n",
+    "from torchvision.models.resnet import ResNet18_Weights\n",
     "# from torchvision.models.utils import load_state_dict_from_url\n",
     "\n",
     "from stepbystep.v3 import StepByStep"
@@ -1125,6 +1126,211 @@
     "        out = out + identity\n",
     "        out = self.relu(out)\n",
     "        return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fine tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ImageNet statistics\n",
+    "normalizer = Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "std=[0.229, 0.224, 0.225])\n",
+    "\n",
+    "composer = Compose([Resize(256),\n",
+    "CenterCrop(224),\n",
+    "ToTensor(),\n",
+    "normalizer])\n",
+    "\n",
+    "train_data = ImageFolder(root='rps', transform=composer)\n",
+    "val_data = ImageFolder(root='rps-test-set', transform=composer)\n",
+    "\n",
+    "# Builds a loader of each set\n",
+    "train_loader = DataLoader(\n",
+    "    train_data, batch_size=16, shuffle=True\n",
+    ")\n",
+    "val_loader = DataLoader(val_data, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to C:\\Users\\vchar/.cache\\torch\\hub\\checkpoints\\resnet18-f37072fd.pth\n",
+      "100%|██████████| 44.7M/44.7M [00:21<00:00, 2.17MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = resnet18(weights=ResNet18_Weights.DEFAULT)\n",
+    "torch.manual_seed(42)\n",
+    "model.fc = nn.Linear(512, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_loss_fn = nn.CrossEntropyLoss(reduction='mean')\n",
+    "optimizer_model = optim.Adam(model.parameters(), lr=3e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sbs_transfer = StepByStep(model, multi_loss_fn, optimizer_model)\n",
+    "sbs_transfer.set_loaders(train_loader, val_loader)\n",
+    "sbs_transfer.train(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[112, 124],\n",
+       "        [124, 124],\n",
+       "        [124, 124]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StepByStep.loader_apply(val_loader, sbs_transfer.correct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "model = resnet18(weights=ResNet18_Weights.DEFAULT).to(device)\n",
+    "model.fc = nn.Identity()\n",
+    "freeze_model(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_preproc = preprocessed_dataset(model, train_loader)\n",
+    "val_preproc = preprocessed_dataset(model, val_loader)\n",
+    "train_preproc_loader = DataLoader(\n",
+    "    train_preproc, batch_size=16, shuffle=True\n",
+    ")\n",
+    "val_preproc_loader = DataLoader(val_preproc, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "top_model = nn.Sequential(nn.Linear(512, 3))\n",
+    "multi_loss_fn = nn.CrossEntropyLoss(reduction='mean')\n",
+    "optimizer_top = optim.Adam(top_model.parameters(), lr=3e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sbs_top = StepByStep(top_model, multi_loss_fn, optimizer_top)\n",
+    "sbs_top.set_loaders(train_preproc_loader, val_preproc_loader)\n",
+    "sbs_top.train(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 98, 124],\n",
+       "        [124, 124],\n",
+       "        [104, 124]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StepByStep.loader_apply(val_preproc_loader, sbs_top.correct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fc = top_model\n",
+    "sbs_temp = StepByStep(model, None, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 98, 124],\n",
+       "        [124, 124],\n",
+       "        [104, 124]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StepByStep.loader_apply(val_loader, sbs_temp.correct)"
    ]
   },
   {
